fix vh usage on mobile and tag margins

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -90,7 +90,7 @@
 
 .card__tag {
   padding: 4px 12px;
-  margin: 0 4px;
+  margin: 4px 4px;
   border: 2px solid #dadada;
   background-color: #dadada;
   border-radius: 16px;
