--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -10,7 +10,7 @@
   --light-grey: #d8d8d8;
   --primary-font: "Poppins", sans-serif;
   font-family: var(--primary-font);
-  font-size: 2vh;
+  font-size: 14px;
 
   --large-text: 2rem;
   --medium-text: 1.5rem;
@@ -57,8 +57,8 @@ ul {
 .backbtn {
   position: fixed;
   color: var(--side-bar-text-color);
-  font-size: 4vh;
-  margin: 5vh 3vh;
+  font-size: 24px;
+  margin: 36px 16px;
 }
 
 .flex-spacer {
